--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
             content="width=device-width, initial-scale=1.0"
         />
         <title>Campfire Craze</title>
+        <link
+            rel="stylesheet"
+            href="./css/styles.css"
+        />
     </head>
 
     <body>
