style: add tablet and mobile style; feat: add loading animation.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             href="./assets/image/favicon.svg"
             type="image/svg"
         />
+        <script src="./js/loading-animation.js"></script>
     </head>
 
     <body>
@@ -410,7 +411,7 @@
                                                 <div class="activity__detail">
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/hiking.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -428,7 +429,7 @@
                                                 <div class="activity__detail">
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/fastfood.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -445,7 +446,7 @@
                                                 <div class="activity__detail">
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/team.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -481,7 +482,7 @@
                                                     <div class="activity__time">8:00</div>
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/hiking.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -499,7 +500,7 @@
                                                     <div class="activity__time">9:30</div>
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/fastfood.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -516,7 +517,7 @@
                                                     <div class="activity__time">10:00</div>
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/team.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -538,7 +539,7 @@
                                                 <div class="activity__detail">
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/lunch.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -556,7 +557,7 @@
                                                 <div class="activity__detail">
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/skill-training.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -574,7 +575,7 @@
                                                 <div class="activity__detail">
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/fastfood.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -592,7 +593,7 @@
                                                 <div class="activity__detail">
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/creative.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -612,7 +613,7 @@
                                                 <div class="activity__detail">
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/relax.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -630,7 +631,7 @@
                                                     <div class="activity__time">12:00</div>
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/lunch.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -648,7 +649,7 @@
                                                     <div class="activity__time">13:00</div>
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/skill-training.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -666,7 +667,7 @@
                                                     <div class="activity__time">15:00</div>
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/fastfood.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -684,7 +685,7 @@
                                                     <div class="activity__time">15:30</div>
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/creative.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -702,7 +703,7 @@
                                                     <div class="activity__time">17:00</div>
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/relax.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -724,7 +725,7 @@
                                                 <div class="activity__detail">
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/dinner.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -742,7 +743,7 @@
                                                 <div class="activity__detail">
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/sing.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -760,7 +761,7 @@
                                                 <div class="activity__detail">
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/telescope.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -779,7 +780,7 @@
                                                     <div class="activity__time">18:00</div>
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/dinner.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -797,7 +798,7 @@
                                                     <div class="activity__time">19:00</div>
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/sing.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
@@ -815,7 +816,7 @@
                                                     <div class="activity__time">21:00</div>
                                                     <img
                                                         loading="lazy"
-                                                        src="./assets/images/activity-icon/check-in.svg"
+                                                        src="./assets/images/activity-icon/telescope.svg"
                                                         alt="activity icon"
                                                         class="activity__icon"
                                                     />
