feat: create custom scroll.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             type="image/svg"
         />
         <script src="./js/loading-animation.js"></script>
+        <script src="./js/smooth-scroll.js"></script>
     </head>
 
     <body>
