--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         />
         <script src="./js/loading-animation.js"></script>
         <script src="./js/smooth-scroll.js"></script>
+        <script src="./js/scroll-trigger.js"></script>
+        <script src="./js/about-event-interaction.js"></script>
     </head>
 
     <body>
