feat: create a countdown timer in hero section/

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
         />
         <link
             rel="icon"
-            href="./assets/image/favicon.svg"
+            href="./assets/images/favicon.svg"
             type="image/svg"
         />
         <script src="./js/loading-animation.js"></script>
         <script src="./js/smooth-scroll.js"></script>
         <script src="./js/scroll-trigger.js"></script>
+        <script src="./js/countdown-event.js"></script>
         <script src="./js/about-event-interaction.js"></script>
     </head>
 
