feat: create interaction for schedule section.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <script src="./js/loading-animation.js"></script>
         <script src="./js/smooth-scroll.js"></script>
         <script src="./js/scroll-trigger.js"></script>
-        <script src="./js/countdown-event.js"></script>
+        <script src="./js/countdown.js"></script>
         <script src="./js/about-event-interaction.js"></script>
+        <script src="./js/schedule.js"></script>
     </head>
 
     <body>
