--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <script src="./js/countdown.js"></script>
         <script src="./js/about-event-interaction.js"></script>
         <script src="./js/schedule.js"></script>
+        <script src="./js/canvas.js"></script>
     </head>
 
     <body>
