feat: create interaction for registration form and contact form.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <script src="./js/about-event-interaction.js"></script>
         <script src="./js/schedule.js"></script>
         <script src="./js/canvas.js"></script>
+        <script src="./js/register-form.js"></script>
+        <script src="./js/contact-form.js"></script>
     </head>
 
     <body>
