--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         />
+        <meta
+            property="og:title"
+            content="Campfire Craze: Register now!"
+        />
+        <meta
+            property="og:description"
+            content="Join us for a fun-filled school camping event! Explore nature, participate in exciting activities, and create lasting memories with your friends."
+        />
         <title>Campfire Craze</title>
         <link
             rel="stylesheet"
