feat: optimize image loading for platforms.

--- a/index.html
+++ b/index.html
@@ -232,12 +232,22 @@
         <main smooth-scroll>
             <ul>
                 <li id="hero-section-container">
-                    <img
-                        loading="lazy"
-                        src="./assets/images/forrest.png"
-                        alt="an image of forrest"
-                        class="hero-section-container__background-image"
-                    />
+                    <picture>
+                        <source
+                            srcset="./assets/images/forrest.png"
+                            media="(min-width: 1200px)"
+                        />
+                        <source
+                            srcset="./assets/images/forrest-medium.png"
+                            media="(min-width: 768px)"
+                        />
+                        <img
+                            loading="lazy"
+                            src="./assets/images/forrest-small.png"
+                            alt="an image of forrest"
+                            class="hero-section-container__background-image"
+                        />
+                    </picture>
                     <section class="hero-section">
                         <div class="hero-section__content">
                             <div class="hero-section__text-container">
@@ -294,39 +304,89 @@
                             <div class="image-slideshow__images">
                                 <ul>
                                     <li class="image-slideshow__image image-slideshow__image--shown">
-                                        <img
-                                            loading="lazy"
-                                            src="./assets/images/about-event/moment-1.png"
-                                            alt="about event moment"
-                                        />
+                                        <picture>
+                                            <source
+                                                srcset="./assets/images/about-event/moment-1.png"
+                                                media="(min-width: 1200px)"
+                                            />
+                                            <source
+                                                srcset="./assets/images/about-event/moment-1-medium.png"
+                                                media="(min-width: 768px)"
+                                            />
+                                            <img
+                                                loading="lazy"
+                                                src="./assets/images/about-event/moment-1-small.png"
+                                                alt="about event moment"
+                                            />
+                                        </picture>
                                     </li>
                                     <li class="image-slideshow__image">
-                                        <img
-                                            loading="lazy"
-                                            src="./assets/images/about-event/moment-2.png"
-                                            alt="about event moment"
-                                        />
+                                        <picture>
+                                            <source
+                                                srcset="./assets/images/about-event/moment-2.png"
+                                                media="(min-width: 1200px)"
+                                            />
+                                            <source
+                                                srcset="./assets/images/about-event/moment-2-medium.png"
+                                                media="(min-width: 768px)"
+                                            />
+                                            <img
+                                                loading="lazy"
+                                                src="./assets/images/about-event/moment-2-small.png"
+                                                alt="about event moment"
+                                            />
+                                        </picture>
                                     </li>
                                     <li class="image-slideshow__image">
-                                        <img
-                                            loading="lazy"
-                                            src="./assets/images/about-event/moment-3.png"
-                                            alt="about event moment"
-                                        />
+                                        <picture>
+                                            <source
+                                                srcset="./assets/images/about-event/moment-3.png"
+                                                media="(min-width: 1200px)"
+                                            />
+                                            <source
+                                                srcset="./assets/images/about-event/moment-3-medium.png"
+                                                media="(min-width: 768px)"
+                                            />
+                                            <img
+                                                loading="lazy"
+                                                src="./assets/images/about-event/moment-3-small.png"
+                                                alt="about event moment"
+                                            />
+                                        </picture>
                                     </li>
                                     <li class="image-slideshow__image">
-                                        <img
-                                            loading="lazy"
-                                            src="./assets/images/about-event/moment-4.png"
-                                            alt="about event moment"
-                                        />
+                                        <picture>
+                                            <source
+                                                srcset="./assets/images/about-event/moment-4.png"
+                                                media="(min-width: 1200px)"
+                                            />
+                                            <source
+                                                srcset="./assets/images/about-event/moment--medium.png"
+                                                media="(min-width: 768px)"
+                                            />
+                                            <img
+                                                loading="lazy"
+                                                src="./assets/images/about-event/moment-4-small.png"
+                                                alt="about event moment"
+                                            />
+                                        </picture>
                                     </li>
                                     <li class="image-slideshow__image">
-                                        <img
-                                            loading="lazy"
-                                            src="./assets/images/about-event/moment-5.png"
-                                            alt="about event moment"
-                                        />
+                                        <picture>
+                                            <source
+                                                srcset="./assets/images/about-event/moment-5.png"
+                                                media="(min-width: 1200px)"
+                                            />
+                                            <source
+                                                srcset="./assets/images/about-event/moment-5-medium.png"
+                                                media="(min-width: 768px)"
+                                            />
+                                            <img
+                                                loading="lazy"
+                                                src="./assets/images/about-event/moment-5-small.png"
+                                                alt="about event moment"
+                                            />
+                                        </picture>
                                     </li>
                                 </ul>
                             </div>
@@ -1421,12 +1481,23 @@
                     </section>
                 </li>
                 <li id="contact-section-container">
-                    <img
-                        loading="lazy"
-                        src="./assets/images/night-camping.png"
-                        alt="section background image"
-                        class="contact-section-container__background-image"
-                    />
+                    <picture>
+                        <source
+                            srcset="./assets/images/night-camping.png"
+                            media="(min-width: 1200px)"
+                        />
+                        <source
+                            srcset="./assets/images/night-camping-medium.png"
+                            media="(min-width: 768px)"
+                        />
+                        <img
+                            loading="lazy"
+                            src="./assets/images/night-camping-small.png"
+                            alt="section background image"
+                            class="contact-section-container__background-image"
+                        />
+                    </picture>
+
                     <section class="contact-section">
                         <div class="contact-section__decorative-vector"></div>
                         <div class="contact-section__text-container">
