feat: add graph tag for index.html and 404.html

--- a/404.html
+++ b/404.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta
+            property="og:type"
+            content="website"
+        />
+        <meta
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         />
@@ -13,6 +17,10 @@
         <meta
             property="og:description"
             content="We are sorry to notice that some content you try to find are broken."
+        />
+        <meta
+            property="og:image"
+            content="./assets/images/meta-image.jpg"
         />
         <link
             rel="stylesheet"
