--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
             content="width=device-width, initial-scale=1.0"
         />
         <meta
+            property="og:type"
+            content="website"
+        />
+        <meta
             property="og:title"
             content="Campfire Craze: Register now!"
         />
         <meta
             property="og:description"
             content="Join us for a fun-filled school camping event! Explore nature, participate in exciting activities, and create lasting memories with your friends."
+        />
+        <meta
+            property="og:image"
+            content="./assets/images/meta-image.jpg"
         />
         <title>Campfire Craze</title>
         <link
