fix: fix error #1

--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
         />
         <meta
             property="og:image"
-            content="./assets/images/meta-image.jpg"
+            content="https://media.istockphoto.com/id/1156199825/vi/vec-to/h%C3%ACnh-minh-h%E1%BB%8Da-vector-c%E1%BB%A7a-tr%E1%BA%A1i-h%C3%A8-tr%E1%BA%BB-em.jpg?s=1024x1024&w=is&k=20&c=Zgtef9aN0BRiv5J4z6XQ8esUaFFWWaMuBGmharyzuOk="
         />
         <link
             rel="stylesheet"
