fix: optimize hero section image for mobile device and format code with prettier.

--- a/index.html
+++ b/index.html
@@ -289,12 +289,18 @@
                                 <div class="cta-button__label">REGISTER NOW</div>
                             </a>
                         </div>
-                        <img
-                            loading="lazy"
-                            src="./assets/images/camping-bag.png"
-                            alt="camping bag"
-                            class="hero-section__image"
-                        />
+                        <picture>
+                            <source
+                                srcset="./assets/images/camping-bag.png"
+                                media="(min-width: 768px)"
+                            />
+                            <img
+                                loading="lazy"
+                                src="./assets/images/camping-bag.png"
+                                alt="camping bag"
+                                class="hero-section__image"
+                            />
+                        </picture>
                     </section>
                 </li>
                 <li id="about-event-section-container">
